# cliboard

./: CLAUDE.md  Cargo.toml  README.md  chat-hook.sh  cliboard-TRD.md  cliboard.skill  dist-workspace.toml
.github/workflows/: release.yml
assets/: viewer.css  viewer.html  viewer.js
src/: cli.rs  document.rs  export.rs  lib.rs  main.rs  parser.rs  render.rs  server.rs  session.rs  unicode.rs
tests/: integration.rs
