[package]
name = "cliboard"
version = "0.2.0"
edition = "2021"
description = "Live math whiteboard for your terminal — render LaTeX equations in the browser with per-step AI chat"
keywords = ["math", "latex", "whiteboard", "claude", "ai-agent"]
categories = ["command-line-utilities", "mathematics", "visualization"]
repository = "https://github.com/maxwellsdm1867/cliboard"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
katex = "0.1"
pulldown-cmark = { version = "0.12", features = ["html"] }
rust-embed = { version = "8", features = ["compression"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs4 = { version = "0.13", features = ["sync"] }
notify = { version = "7", features = ["macos_fsevent"] }
tempfile = "3"
tungstenite = "0.24"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
ctrlc = "3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
